gcc/testsuite/rust/rustc/ui/const-generics/generic_const_exprs/mismatched-gat-subst-kind.rs
#![feature(generic_const_exprs)]
// { dg-warning "" "" { target *-*-* } .-1 }

trait B {
    type U<T>;
}

fn f<T: B<U<1i32> = ()>>() {}
// { dg-error ".E0747." "" { target *-*-* } .-1 }

fn main() {}

